--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -1,68 +1,105 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro</title>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+    <title>Register</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
 </head>
 
-<body>
+<body class="login-page">
+    <div class="login-box">
+        <div class="login-logo">
+            <h1>
+                <img src="/static/images/logo.gif" alt="Logo Animada" id="logo">
+            </h1>
 
-    <form action="{% url 'register' %}" method="POST"> {% csrf_token %}
+        </div>
+        <div class="card">
+            <div class="card-body">
+                <p class="login-box-msg">Sign up</p>
 
-        <input type="text" placeholder="Username" name="username" required>
-        <br>
-        <br>
-        <input type="text" placeholder="Name" name="full_name" required>
-        <br>
-        <br>
-        <input type="email" placeholder="E-mail" name="email" required>
-        <br>
-        <br>
-        <input type="tel" placeholder="(99)99999-9999" name="phone" oninput="mascaraTelefone(event)" required>
-        <br>
-        <br>
-        <input type="password" id="password" placeholder="Password" name="password" maxlength="32" autocomplete="off"
-            required>
-        <br>
-        <br>
-        <input type="password" id="password_confirm" placeholder="Confirm Password" name="password_confirm"
-            maxlength="32" autocomplete="off" required>
-        <br>
-        <br>
-        <input type="submit" value="Register" onclick="return validarSenha()">
-
-    </form>
-    <script>
-        // Função para aplicar a máscara ao número de telefone
-        function mascaraTelefone(event) {
-            const input = event.target;
-            const value = input.value.replace(/\D/g, '');
-            // input.value = input.value.replace(/[^0-9!@#$%^&*()-_+=]/g, '');KL
-            if (value.length <= 10) {
-                input.value = value.replace(/(\d{2})(\d{0,5})(\d{0,4})/, '($1) $2-$3');
-            } else {
-                input.value = value.replace(/(\d{2})(\d{0,5})(\d{0,4})/, '($1) $2-$3').substring(0, 15);
-            }
-        }
-        // Fim da Função  telefone
-
-        // validar senha em duas etapas
-        function validarSenha() {
-            var password = document.getElementById("password").value;
-            var password_confirm = document.getElementById("password_confirm").value;
-
-            if (password !== password_confirm) {
-                alert("As senhas não coincidem.");
-                return false; // Impede o envio do formulário
-            }
-
-            return true; // Permite o envio do formulário se as senhas coincidirem
-        }
+                <form action="{% url 'register' %}" method="POST"> {% csrf_token %}
 
 
-    </script>
+                    <div class="input-group mb-3">
+                        <input type="text" placeholder="Username" name="username" class="form-control" required>
+
+                        <br>
+                        <br>
+                    </div>
+                    <div class="input-group mb-3">
+                        <input type="text" placeholder="Name" name="full_name" class="form-control" required>
+
+                        <br>
+                        <br>
+                    </div>
+                    <div class="input-group mb-3">
+                        <input type="email" placeholder="E-mail" name="email" class="form-control" required>
+
+                        <br>
+                        <br>
+                    </div>
+                    <div class="input-group mb-3">
+                        <input type="tel" placeholder="(99)99999-9999" name="phone" oninput="mascaraTelefone(event)"
+                            class="form-control" required>
+
+                        <br>
+                        <br>
+                    </div>
+                    <div class="input-group mb-3">
+                        <input type="password" id="password" placeholder="Password" name="password" maxlength="32"
+                            autocomplete="off" class="form-control" required>
+
+                        <br>
+                        <br>
+                    </div>
+                    <div class="input-group mb-3">
+                        <input type="password" id="password_confirm" placeholder="Confirm Password"
+                            name="password_confirm" maxlength="32" autocomplete="off" class="form-control" required>
+
+                        <br>
+                        <br>
+                    </div>
+
+
+                    <input type="submit" value="Register" onclick="return validarSenha()"
+                        class="btn btn-primary btn-block">
+
+                </form>
+                <script>
+                    // Função para aplicar a máscara ao número de telefone
+                    function mascaraTelefone(event) {
+                        const input = event.target;
+                        const value = input.value.replace(/\D/g, '');
+                        // input.value = input.value.replace(/[^0-9!@#$%^&*()-_+=]/g, '');KL
+                        if (value.length <= 10) {
+                            input.value = value.replace(/(\d{2})(\d{0,5})(\d{0,4})/, '($1) $2-$3');
+                        } else {
+                            input.value = value.replace(/(\d{2})(\d{0,5})(\d{0,4})/, '($1) $2-$3').substring(0, 15);
+                        }
+                    }
+                    // Fim da Função  telefone
+
+                    // validar senha em duas etapas
+                    function validarSenha() {
+                        var password = document.getElementById("password").value;
+                        var password_confirm = document.getElementById("password_confirm").value;
+
+                        if (password !== password_confirm) {
+                            alert("As senhas não coincidem.");
+                            return false; // Impede o envio do formulário
+                        }
+
+                        return true; // Permite o envio do formulário se as senhas coincidirem
+                    }
+
+
+                </script>
 
 </body>
 
